Complete M2 - Quality Firewall implementation
Implemented M2 quality controls to protect the memory corpus from entropy:

- Content hygiene: length validation, whitespace normalization, useless pattern rejection
- Near-duplicate detection: cosine similarity-based deduplication with configurable threshold
- Exact duplicate rejection: hash-based detection
- CommitOutcome event system: extensible hooks for observability and automation
- Enhanced CLI: added --tags and --artifact-ref flags for memory add command
- Smoke test suite: test_m2_smoke.sh validates M2 quality firewall behavior

M2 acceptance checks:
✓ Low-value content is consistently rejected with clear explanations
✓ Near-duplicates are detected and prevented from polluting the store
✓ Content normalization ensures consistent formatting
✓ Commit outcomes are observable and actionable

Next: M3 - Temporal & Truth Mechanics (awaiting green light)

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-# Vestig M1 Configuration
+# Vestig Configuration
 
 # Embedding configuration
 embedding:
@@ -13,3 +13,13 @@ storage:
 # Retrieval
 retrieval:
   default_limit: 5
+
+# M2: Content hygiene (quality firewall)
+hygiene:
+  min_chars: 12
+  max_chars: 4000
+  normalize_whitespace: true
+  reject_exact_duplicates: true
+  near_duplicate:
+    enabled: true
+    threshold: 0.92
