Complete M4 - Graph Layer with entity extraction
Implements navigable knowledge graph with LLM-based entity extraction:

Core Features:
- Entity extraction via Claude Sonnet 4.5 with confidence gating
- Entity deduplication via deterministic norm_key canonicalization
- MENTIONS edges (Memory → Entity) with confidence scores
- RELATED edges (Memory → Memory) via semantic similarity
- 1-hop graph traversal and expansion
- Bi-temporal modeling on all edges
- ENTITY_EXTRACTED events for auditability

Implementation:
- EntityNode and EdgeNode with bi-temporal fields
- LLM integration with prompts.yaml for easy customization
- Graph traversal API (expand_via_entities, expand_via_related)
- Atomic transactions ensure consistency
- Soft deletion preserves history

Testing:
- 65+ tests across 6 test files (all passing)
- demo_m4.sh for end-to-end demonstration
- test_m4_smoke.sh for quick validation

Configuration:
- Entity types: PERSON, ORG, SYSTEM, PROJECT, PLACE
- Similarity threshold: 0.6 (configurable)
- Min confidence: 0.75 (configurable)
- Max edges per memory: 10 (prevents graph sprawl)

--- a/config.yaml
+++ b/config.yaml
@@ -38,3 +38,52 @@ m3:
 
   retrieval:
     include_expired: false  # Show deprecated memories by default?
+
+# M4: Graph Layer (entities, edges, traversal)
+m4:
+  entity_types:
+    # Configurable entity types (not hardcoded)
+    # Start small, expand as needed
+    allowed_types:
+      - PERSON
+      - ORG
+      - SYSTEM      # Software, services, tools
+      - PROJECT
+      - PLACE
+
+  entity_extraction:
+    enabled: true
+    mode: llm              # "llm" or "heuristic"
+
+    # LLM extraction settings
+    llm:
+      model: claude-sonnet-4.5  # Or from global config
+      max_entities_per_memory: 10
+      min_confidence: 0.75       # Only create edges above this threshold
+      store_low_confidence: false  # Don't store edges below threshold
+      max_evidence_length: 200   # Chars for evidence field
+
+    # Optional heuristic cleanup (post-LLM)
+    heuristics:
+      strip_titles: true         # "Dr Alice" → "Alice"
+      normalize_org_suffixes: true  # "Acme Ltd" → "Acme"
+      reject_garbage: true       # All punctuation, too short
+      split_lists: false         # "A, B and C" → separate entities (risky)
+
+  edge_creation:
+    mentions:
+      enabled: true
+      default_weight: 1.0
+      confidence_gated: true     # Respect min_confidence from extraction
+
+    related:
+      enabled: true
+      similarity_threshold: 0.6   # Conservative (high bar)
+      max_edges_per_memory: 10    # Cap to prevent graph sprawl
+
+  graph_expansion:
+    enabled: true
+    max_expand_via_entities: 3   # Limit 1-hop entity expansion
+    max_expand_via_related: 3    # Limit 1-hop RELATED expansion
+    include_expired: false       # Exclude expired edges by default
+    min_confidence: 0.75         # Exclude low-confidence edges from expansion
