Add LLM-based document ingestion
Implements vestig ingest command to extract memories from documents:

Features:
- LLM extracts discrete memories from conversation transcripts
- Automatic chunking by character count (~5k tokens per chunk)
- Chunk overlap for context continuity
- Confidence gating (default min 0.6)
- Each extracted memory committed through existing pipeline
- Entity extraction happens automatically via M4
- Deduplication via M2 content hashing

Implementation:
- New module: src/vestig/core/ingestion.py
  - chunk_text_by_chars() for simple token-based chunking
  - extract_memories_from_chunk() calls LLM with prompt
  - ingest_document() orchestrates full pipeline
- New prompt: extract_memories_from_session in prompts.yaml
- New CLI command: vestig ingest <document>

Usage:
  vestig ingest session.txt
  vestig ingest session.txt --chunk-size 15000 --min-confidence 0.7
  vestig ingest session.txt --model claude-opus-4

Options:
  --chunk-size: Characters per chunk (default 20k ≈ 5k tokens)
  --chunk-overlap: Character overlap (default 500)
  --model: LLM model for extraction (default claude-sonnet-4.5)
  --min-confidence: Minimum confidence threshold (default 0.6)

Test:
- test_ingest.py validates full pipeline with mocked LLM
- test_session_sample.txt provides sample conversation
- Successfully extracts 5 memories from sample session

--- a/prompts.yaml
+++ b/prompts.yaml
@@ -30,3 +30,31 @@ extract_entities: |
   }
 
   If no entities found, return: {"entities": []}
+
+# Session Ingestion: Extract memories from conversation transcripts
+extract_memories_from_session: |
+  Extract discrete, factual memories from this conversation transcript.
+
+  Guidelines:
+  1. Extract ONE clear fact, decision, insight, or piece of knowledge per memory
+  2. Each memory should be self-contained with enough context to understand it independently
+  3. Focus on substantive content (technical details, decisions, learnings, etc.)
+  4. Skip greetings, small talk, and purely procedural exchanges
+  5. Preserve important context (who said/did what, when applicable)
+  6. Assign confidence based on how clear and factual the information is
+
+  Conversation chunk:
+  {{content}}
+
+  Output ONLY valid JSON in this exact format:
+  {
+    "memories": [
+      {
+        "content": "The full memory text with enough context to be self-contained",
+        "confidence": 0.0-1.0,
+        "rationale": "Brief explanation of why this is worth remembering"
+      }
+    ]
+  }
+
+  If no substantive memories found, return: {"memories": []}
