Fix LLM integration and add schema support
Major changes:
- Replace hardcoded Anthropic SDK with llm module for provider flexibility
- Add Pydantic schemas for structured output (EntityExtractionResult, MemoryExtractionResult)
- Fix JSON parsing to use llm's schema support properly
- Add ingestion config section (model, chunk_size, min_confidence)
- Update CLI to read model from config with CLI override capability
- Remove all hardcoded model defaults

Fixes:
- Model name resolution now handled by llm module (supports aliases like claude-haiku-4.5)
- Structured output validation via Pydantic schemas prevents malformed JSON
- Config-driven design: both entity extraction and memory ingestion read from config

Files changed:
- src/vestig/core/entity_extraction.py: llm module + schemas
- src/vestig/core/ingestion.py: llm module + schemas
- src/vestig/core/cli.py: config-based model with overrides
- config.yaml, config_test.yaml, test/config.yaml: ingestion section
- COMMANDS.txt, QUICKSTART_INGESTION.md: updated docs

--- a/config.yaml
+++ b/config.yaml
@@ -24,6 +24,13 @@ hygiene:
     enabled: true
     threshold: 0.92
 
+# Document ingestion (LLM-based memory extraction)
+ingestion:
+  model: claude-sonnet-4.5          # LLM for memory extraction
+  chunk_size: 20000                 # Characters per chunk (≈5k tokens)
+  chunk_overlap: 500                # Overlap for context continuity
+  min_confidence: 0.6               # Minimum confidence threshold
+
 # M3: Time & Truth (TraceRank, temporal ranking)
 m3:
   event_logging:
