Expand entity types: add SKILL, TOOL, FILE, CONCEPT
Added 4 new entity types to capture more knowledge:
- SKILL: Programming languages, methodologies, techniques
- TOOL: Tools, libraries, frameworks, packages
- FILE: Files, paths, configurations, documents
- CONCEPT: Abstract concepts, patterns, principles

Updated:
- config.yaml, test/config.yaml: Added new types to allowed_types
- test/prompts.yaml: Updated prompts with new entity types
- src/vestig/core/ingestion.py: Updated EntitySchema description

--- a/config.yaml
+++ b/config.yaml
@@ -50,13 +50,16 @@ m3:
 m4:
   entity_types:
     # Configurable entity types (not hardcoded)
-    # Start small, expand as needed
     allowed_types:
-      - PERSON
-      - ORG
-      - SYSTEM      # Software, services, tools
-      - PROJECT
-      - PLACE
+      - PERSON      # People, developers, users
+      - ORG         # Organizations, companies, teams
+      - SYSTEM      # Software systems, services, applications
+      - PROJECT     # Projects, repositories, codebases
+      - PLACE       # Locations, servers, environments
+      - SKILL       # Programming languages, methodologies, techniques
+      - TOOL        # Tools, libraries, frameworks, packages
+      - FILE        # Files, paths, configurations, documents
+      - CONCEPT     # Abstract concepts, patterns, principles, ideas
 
   entity_extraction:
     enabled: true
