Add version display and recursive globbing support
- Display version on startup (configurable via display.show_version)
- Add -r/--recurse flag for ingest to enable ** glob patterns
- Version read from package metadata, falls back to 'dev'

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,9 @@
 # Vestig Configuration
 
+# Display settings
+display:
+  show_version: true  # Set to false to suppress version output on startup
+
 # Embedding configuration
 embedding:
   model: "BAAI/bge-m3"
