--- a/test/config-matt.yaml
+++ b/test/config-matt.yaml
@@ -1,5 +1,9 @@
 # Test config - uses Haiku for cost efficiency
 
+# Display settings
+display:
+  show_version: true  # Set to false to suppress version output on startup
+
 # Embedding configuration
 embedding:
   model: "BAAI/bge-m3"
